# LiteRT-LM

./: .bazelrc  Package.swift  README.md  WORKSPACE  pyproject.toml  setup.py  uv.toml  version.bzl
.github/workflows/: ci-build-mac.yml  ci-build.yml
c/: BUILD  engine.cc  engine.h  engine_test.cc
prebuilt/macos_arm64/: libLiteRt.dylib  libLiteRtMetalAccelerator.dylib  libLiteRtTopKWebGpuSampler.dylib  libLiteRtWebGpuAccelerator.dylib
python/litert_lm/: BUILD  README.md  engine_test.py  interfaces.py  litert_lm.cc
python/litert_lm_cli/: BUILD  main.py  venv_manager.py
runtime/components/: BUILD  lora.cc  model_resources.h  model_resources_litert_lm.cc  model_resources_litert_lm.h  model_resources_task.cc  model_resources_task.h  model_resources_test.cc  sampler_factory.cc
runtime/conversation/: BUILD  conversation.cc  conversation.h  conversation_test.cc
runtime/core/: BUILD  engine_advanced_impl.cc  engine_advanced_impl_test.cc  engine_impl.cc  engine_impl_test.cc  engine_legacy_impl.cc  pipeline.cc  pipeline.h  pipeline_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  tasks.cc
runtime/engine/: BUILD  engine_settings.cc  engine_settings.h  engine_settings_test.cc  io_types.cc  io_types.h  io_types_test.cc  litert_lm_advanced_main.cc  litert_lm_lib.cc  litert_lm_main.cc
runtime/executor/: BUILD  audio_executor_settings.cc  audio_executor_settings_test.cc  audio_litert_compiled_model_executor.cc  audio_litert_compiled_model_executor.h  audio_litert_compiled_model_executor_test.cc  executor_settings_base.cc  executor_settings_base.h  (+25 more)
(+53 files in other folders)
